Fix Header overlap

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -4,6 +4,7 @@
   background-color: navy;
   display: flex;
   justify-content: space-between;
+  z-index: 10;
 }
 
 .header img {
